--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.79.2",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
